# SearchEngine

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.bat  build.ninja  build.sh  cmake_install.cmake  compile_commands.json
src/: Connection.cpp  Connection.h  connection.cpp  connection.h  main.cpp
